ros2_wshesh/log/build_2025-09-10_16-29-01/turtle_pkg/stderr.log
  File "/ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg/TurtleController.py", line 26
    self.pub2 = self.create_publisher(Twist) ,f'/turtle2/cmd_vel',10)
                                                                    ^
SyntaxError: unmatched ')'

